--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "landing-page",
-  "version": "0.1.0",
+  "name": "tene-marketplace",
+  "version": "1.0.0",
   "private": true,
+  "description": "תנה - פלטפורמת מרקטפלייס דיגיטלית שמחברת חקלאים קטנים ובינוניים ישירות עם צרכנים",
+  "author": "Shmuel & Elad",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
@@ -15,8 +18,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
