--- a/netlify.toml
+++ b/netlify.toml
@@ -3,8 +3,9 @@
   publish = "build"
 
 [build.environment]
-  NODE_VERSION = "18"
-  NPM_VERSION = "9"
+  NODE_VERSION = "16"
+  NPM_VERSION = "8"
+  NODE_OPTIONS = "--openssl-legacy-provider"
 
 [[redirects]]
   from = "/*"
