--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,9 @@
 [build]
-  command = "npm run build"
+  command = "npm run build:legacy"
   publish = "build"
 
 [build.environment]
-  NODE_VERSION = "16"
-  NPM_VERSION = "8"
+  NODE_VERSION = "14"
   NODE_OPTIONS = "--openssl-legacy-provider"
 
 [[redirects]]
